Correção no formato do horario, na exibição da Grade e do ícone do Menu.

--- a/fonte/coruja/meu_coruja/grade.html
+++ b/fonte/coruja/meu_coruja/grade.html
@@ -52,7 +52,7 @@
                                 break;
                         }
                         horario = boletim[i].minhaGrade[j].horario;
-                        nomeDisciplina = "testes";
+                        console.log(horario);
                         siglaDisciplina = boletim[i].minhaGrade[j].siglaDisciplina;
                         professor = boletim[i].minhaGrade[j].professor;
                         $("#" + flg_dia).find('tbody')
