--- a/fonte/coruja/meu_coruja/index.html
+++ b/fonte/coruja/meu_coruja/index.html
@@ -22,7 +22,7 @@
             <div id="result"></div>
             <form class="form-signin" id="loginForm" action="#"> 
               <h2 class="form-signin-heading">Meu Coruja</h2>
-              <input id="usuario" type="text" class="form-control" name="nomeAcesso" placeholder="Matrícula" required="" autofocus="" />
+              <input id="usuario" type="text" class="form-control" name="nomeAcesso" placeholder="Matrícula" required="" autofocus />
               <br>
               <input id="senha" type="password" class="form-control" name="senha" placeholder="Senha" required=""/>      
               <br>
