Pequeno ajuste no alinhamento do título na tela de pendencias

--- a/fonte/coruja/meu_coruja/pendencias.html
+++ b/fonte/coruja/meu_coruja/pendencias.html
@@ -43,7 +43,7 @@
     <body class="link4">
 
         <div class="site-wrap">
-            <h1 class="titulo-pagina">Disciplinas Pendentes</h1>
+            <h1>Disciplinas Pendentes</h1>
 
             <table class="table table-striped" id="pendencias">
                 <thead>
